Angular Add Loading Overlay

--- a/MyProjects/SightMap/Views/Shared/_Layout.cshtml
+++ b/MyProjects/SightMap/Views/Shared/_Layout.cshtml
@@ -2,27 +2,28 @@
 
 <html>
 <head>
-  <meta name="viewport" content="width=device-width" />
-  <base href="/">
-  <script src="~/jquery/jquery.min.js"></script>
-  <title>@ViewBag.Title</title>
+    <meta name="viewport" content="width=device-width" />
+    <base href="/">
+    <script src="~/jquery/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gasparesganga-jquery-loading-overlay@2.1.6/dist/loadingoverlay.min.js"></script>
+    <title>@ViewBag.Title</title>
 </head>
 <body>
-  <div>
-    @RenderBody()
-  </div>
+    <div>
+        @RenderBody()
+    </div>
 
-  <script src="~/dist/runtime-es2015.js" type="module"></script>
-  <script src="~/dist/runtime-es5.js" nomodule defer></script>
-  <script src="~/dist/polyfills-es5.js" nomodule defer></script>
-  <script src="~/dist/polyfills-es2015.js" type="module"></script>
-  <script src="~/dist/styles-es2015.js" type="module"></script>
-  <script src="~/dist/styles-es5.js" nomodule defer></script>
-  <script src="~/dist/scripts.js" defer></script>
-  <script src="~/dist/vendor-es2015.js" type="module"></script>
-  <script src="~/dist/vendor-es5.js" nomodule defer></script>
-  <script src="~/dist/main-es2015.js" type="module"></script>
-  <script src="~/dist/main-es5.js" nomodule defer></script>
+    <script src="~/dist/runtime-es2015.js" type="module"></script>
+    <script src="~/dist/runtime-es5.js" nomodule defer></script>
+    <script src="~/dist/polyfills-es5.js" nomodule defer></script>
+    <script src="~/dist/polyfills-es2015.js" type="module"></script>
+    <script src="~/dist/styles-es2015.js" type="module"></script>
+    <script src="~/dist/styles-es5.js" nomodule defer></script>
+    <script src="~/dist/scripts.js" defer></script>
+    <script src="~/dist/vendor-es2015.js" type="module"></script>
+    <script src="~/dist/vendor-es5.js" nomodule defer></script>
+    <script src="~/dist/main-es2015.js" type="module"></script>
+    <script src="~/dist/main-es5.js" nomodule defer></script>
 
 </body>
 </html>
