--- a/MyProjects/SightMap/src/app/show/filter/filter.component.html
+++ b/MyProjects/SightMap/src/app/show/filter/filter.component.html
@@ -1,7 +1,7 @@
 <div class="col text-center" style="background-color: darkgrey">
     <p>Фильтр</p>
     <div class="container">
-        <form class="form" method="get" [action]="dataService.apiSight">
+        <form class="form" method="get">
             <table class="table">
                 <thead>
                     <tr>
