--- a/MyProjects/SightMap/src/app/show/detail/review/review.component.html
+++ b/MyProjects/SightMap/src/app/show/detail/review/review.component.html
@@ -1,8 +1,8 @@
 
 <ul>
-    <li *ngForm="let review in reviews">
+    <li *ngFor="let review of reviews">
         <div>Автор: {{review.authorId}}</div>
         <div>Пишет: {{review.message}}</div>
-        <review-comp *ngIf="review.children.lenght > 0" (reviews)="review.children" ></review-comp>
+        <review-comp *ngIf="review.children.length > 0" [Reviews]="review.children"></review-comp>
     </li>
 </ul>
