--- a/MyProjects/SightMap/src/app/show/detail/review/review.component.html
+++ b/MyProjects/SightMap/src/app/show/detail/review/review.component.html
@@ -1,8 +1,17 @@
 
 <ul>
-    <li *ngFor="let review of reviews">
+    <li *ngFor="let review of reviews; let show = false">
         <div>Автор: {{review.authorId}}</div>
         <div>Пишет: {{review.message}}</div>
+        <form *ngIf="show" [id]="'formN'+review.parentId" method="post" #form="ngForm" ngNativeValidate
+              (ngSubmit)="addReview(form, review.parentId)">
+            <input type="hidden" name="itemId" id="itemId" [value]="review.itemId" />
+            <input type="hidden" name="parentId" id="parentId" [value]="review.id" />
+            <input type="text" name="message" placeholder="Введите сообщение..." required />
+        </form>
+        <button class="btn btn-primary m-x-1" (click)="show = !show">Написать</button>
+        <button class="btn btn-primary m-x-1" type="submit" [attr.form]="'formN'+review.parentId">Отправить</button>
+        <button class="btn btn-primary m-x-1" (click)="deleteReview(review.id, review.parentId)">Удалить</button>
         <review-comp *ngIf="review.children.length > 0" [Reviews]="review.children"></review-comp>
     </li>
 </ul>
