--- a/MyProjects/SightMap/Views/Shared/_Layout.cshtml
+++ b/MyProjects/SightMap/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <base href="/">
     <script src="~/jquery/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/gasparesganga-jquery-loading-overlay@2.1.6/dist/loadingoverlay.min.js"></script>
+    @*<script src="https://cdn.jsdelivr.net/npm/gasparesganga-jquery-loading-overlay@2.1.6/dist/loadingoverlay.min.js"></script>*@
     <title>@ViewBag.Title</title>
 </head>
 <body>
