Angular Showmap onwork

--- a/MyProjects/SightMap/src/app/app.component.html
+++ b/MyProjects/SightMap/src/app/app.component.html
@@ -9,6 +9,9 @@
         <div class="m-a-10 col-2">
             <button class="btn btn-primary" routerLink="/show">Просмотр</button>
         </div>
+        <div class="m-a-10 col-2">
+                <button class="btn btn-primary" routerLink="/showmap">Поиск по карте</button>
+            </div>
     </div>
 </div>
 
