--- a/MyProjects/SightMap/src/app/show/mapfilter/mapfilter.component.html
+++ b/MyProjects/SightMap/src/app/show/mapfilter/mapfilter.component.html
@@ -1,4 +1,4 @@
 <p>Фильтр по карте</p>
 <div class="col text-center" style="background-color: darkgrey; height: 500px;">
-    <yan-map></yan-map>
+    <yan-map (boundsChanged)="applyFilter($event)" [setCollection]="setCollection"></yan-map>
 </div>
