Angular Добавлена установка начальной точки на карте

--- a/MyProjects/SightMap/src/app/show/detail/detail.component.html
+++ b/MyProjects/SightMap/src/app/show/detail/detail.component.html
@@ -83,7 +83,7 @@
                         </div>
                     </div>
                     <div class="col">
-                        <yan-map (coordinateChanged)="setCoordinates($event)" [switchEditMode]="switchEditMode"></yan-map>
+                        <yan-map (coordinateChanged)="setCoordinates($event)" [switchEditMode]="switchEditMode" [initPoint]="getInitPoint()"></yan-map>
                     </div>
                 </div>
 
