--- a/MyProjects/SightMap/src/app/create/create.component.html
+++ b/MyProjects/SightMap/src/app/create/create.component.html
@@ -20,10 +20,44 @@
                     <input class="form-control" type="text" id="name" name="name" placeholder="Enter name"
                         [(ngModel)]="newSight.name" required pattern="^[А-Яа-яA-Za-z ]{2,}" />
                 </div>
-                <div class="col-3">
+            </div>
+
+            <div class="form-group row">
+                <div class="col-6">
                     <img id="preview" class="img-thumbnail" height="200" src="\img\empty.jpg" />
-                    <input type="file" name="image" accept=".png .jpg .jpeg" value=""
-                        (change)="prepareImgPreview($event)" />
+                    <input type="file" name="album[0]" accept="image/*" value="Главная"
+                        (change)="prepareImgPreview($event)" #inputVar0/>
+                        <input type="text" name="album[0].imageName" value="{{inputVar0.value}}" hidden="hidden"/>
+                </div>
+                <div class="col-6">
+                    <div class="row">
+                        <div class="col-6">
+                            <img id="preview" class="img-thumbnail" height="200" src="\img\empty.jpg" />
+                            <input type="file" name="image" accept="image/*" #inputVar1
+                                (change)="prepareImgPreview($event)" />
+                                <input type="text" name="album[1].imageName" value="{{inputVar1.value}}" hidden="hidden"/>
+                        </div>
+                        <div class="col-6">
+                            <img id="preview" class="img-thumbnail" height="200" src="\img\empty.jpg" />
+                            <input type="file" name="image" accept="image/*" #inputVar2
+                                (change)="prepareImgPreview($event)" />
+                                <input type="text" name="album[2].imageName" value="{{inputVar2.value}}" hidden="hidden"/>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6">
+                            <img id="preview" class="img-thumbnail" height="200" src="\img\empty.jpg" />
+                            <input type="file" name="image" accept="image/*" #inputVar3
+                                (change)="prepareImgPreview($event)" />
+                                <input type="text" name="album[3].imageName" value="{{inputVar3.value}}" hidden="hidden"/>
+                        </div>
+                        <div class="col-6">
+                            <img id="preview" class="img-thumbnail" height="200" src="\img\empty.jpg" />
+                            <input type="file" name="image" accept="image/*" #inputVar4
+                                (change)="prepareImgPreview($event)" />
+                                <input type="text" name="album[4].imageName" value="{{inputVar4.value}}" hidden="hidden"/>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -71,7 +105,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <yan-map (coordinateChanged)="setCoordinates($event)"></yan-map>
+                    <yan-map (coordinateChanged)="setCoordinates($event)" [removeInitPoint]="removeInitPoint"></yan-map>
                 </div>
             </div>
             <button class="btn btn-primary" type="submit">Отправить</button>
